# postgresql-binaries

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/postgresql_binaries/: __init__.py
