[project]
name = "postgresql-binaries"
version = "0.0.0"
description = "PostgreSQL binaries for Linux, MacOS and Windows"
readme = "README.md"
authors = [
    { name = "Oli Russell", email = "mrxoliver@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
